# Applied-cpp

./: readme.txt  test.cpp
15-0/: CMakeLists.txt  picture
alloc/: CMakeLists.txt  a.out  apalloc.hpp  ptr.hpp  test.cpp
alloc_old/: apalloc.hpp  apallocator.hpp  apallocatorbase.hpp
alloc_ptr/: a.out  apalloc.hpp  apallocator.hpp  apallocatorbase.hpp  ptr.hpp  testapalloc.cpp
alloc_ptr_has_copyconstructor/: a.out  apalloc.hpp  apallocator.hpp  apallocatorbase.hpp  ptr.hpp  testapallocator.cpp
apimage-01/: CMakeLists.txt  image.cpp  image.h  main.cpp  old_CMAKE  old_Makefile
apimage-02/: CMakeLists.txt  image.cpp  image.h  main.cpp  picture.cpp  picture.h  ptr.hpp
final_implementation/: bstring.cpp  bstring.h  datatype.h  geometry.cpp  geometry.h  imagestorage.h  main.cpp
prototype1/: CMakeLists.txt  apimage.cpp  apimage.h  main.cpp
prototype1_template/: CMakeLists.txt  apimage.hpp  main.cpp
prototype2/: CMakeLists.txt  apimage.hpp  main.cpp  rgb.cpp  rgb.h
prototype3/: CMakeLists.txt  a.out  apimagestorage.cpp  apimagestorage.h  apstorage.cpp  apstorage.h  main.cpp  test.cpp
ptr_unsigned_char/: Makefile  image.cpp  image.h  main.cpp  picture  ptr.hpp
test/: allocTmpl.h  bstring.cpp  bstring.h  exception.h  geometry.cpp  geometry.h  imageStorage.cpp  imageStorage.h  lock.h
teststr/: ptr.hpp  str.cpp  str.h  teststr.cpp  vec.cpp  vec.h
